# booru

./: LICENSE.md  README.md  pyproject.toml
alembic/: README.md
alembic/versions/: 2024_06_12_2009-91101a4ebea2_initial_migration.py  2024_06_13_0059-52599c6cb4f5_added_trash_field_to_image.py
app/: __init__.py  constants.py  database.py  service.py  utils.py
app/home/: router.py  service.py
app/image/: router.py  service.py
app/models/: __init__.py  association.py  image.py  tag.py
app/templates/layout/: base.html  nav.html  pagination.html
app/templates/pages/: edit.html  home.html  image.html  upload.html
app/upload/: router.py  service.py
docs/: alembic.example.ini  settings.example.toml
