[tool.poetry]
name = "booru"
version = "0.1.0"
description = "Yet another booru"
authors = ["Volbil"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.30"
fastapi = "^0.111.0"
bcrypt = "^4.1.3"
aiohttp = "^3.9.5"
dynaconf = "^3.2.5"
jinja2-fragments = "^1.3.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
alembic = "^1.11.3"
arel = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
exclude = [".venv", "venv", "alembic"]

[tool.ruff.lint]
extend-ignore = [
    "F821",  # Disable checks for annotated SQLAlchemy relations 
]